--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -23,3 +23,10 @@ indexes:
   - name: Icao24
   - name: TimeSlots
     direction: desc
+
+- kind: flight
+  properties:
+  - name: Icao24
+  - name: Timeslots
+  - name: LastUpdate
+    direction: desc
