--- a/backend/backend.yaml
+++ b/backend/backend.yaml
@@ -3,10 +3,15 @@ module: backend
 version: one
 runtime: go
 api_version: go1
-instance_class: F1
+instance_class: B2
+basic_scaling:
+  max_instances: 3
+  idle_timeout: 5m
+
 
 handlers:
 - url: /static
   static_dir: static
 - url: /.*
   script: _go_app
+  login: required
