--- a/ui/index.yaml
+++ b/ui/index.yaml
@@ -12,7 +12,13 @@ indexes:
 
 - kind: flight
   properties:
-  - name: Icao24
+  - name: Ident
   - name: Timeslots
   - name: LastUpdate
+    direction: desc
+
+- kind: flight
+  properties:
+  - name: Waypoints
+  - name: Timeslots
     direction: desc
