--- a/backend/backend.yaml
+++ b/backend/backend.yaml
@@ -12,6 +12,7 @@ basic_scaling:
 handlers:
 - url: /static
   static_dir: static
+# Find a way to make batch exempt ...
 - url: /.*
   script: _go_app
   login: required
