--- a/backend/backend.yaml
+++ b/backend/backend.yaml
@@ -5,14 +5,17 @@ runtime: go
 api_version: go1
 instance_class: B2
 basic_scaling:
-  max_instances: 3
-  idle_timeout: 5m
+  max_instances: 6
+  idle_timeout: 4m
 
 
 handlers:
 - url: /static
   static_dir: static
 # Find a way to make batch exempt ...
+- url: /fdb/fr24
+  script: _go_app
+  login: admin
 - url: /.*
   script: _go_app
-#  login: required
+  login: required
