Hacky fix for loops and t.ClosestTo; altitude filters. Fix IdSpec parsing (callsign ACA123 taken as IcaoId) Make IdSpecs represent a range of times Tidy up API/Json/debug stuff a tiny bit

--- a/backend/dispatch.yaml
+++ b/backend/dispatch.yaml
@@ -12,7 +12,8 @@ dispatch:
 
 - url: "fdb.serfr1.org/fdb/*"
   module: ui
-
+- url: "fdb.serfr1.org/api/*"
+  module: ui
 - url: "*/static/*"
   module: ui
 
@@ -23,6 +24,5 @@ dispatch:
 
 - url: "fdb.serfr1.org/report"
   module: backend
-
 - url: "fdb.serfr1.org/batch/*"
   module: backend
