--- a/ui/index.yaml
+++ b/ui/index.yaml
@@ -12,6 +12,18 @@ indexes:
 
 - kind: flight
   properties:
+  - name: Icao24
+  - name: Timeslots
+
+- kind: flight
+  properties:
+  - name: Icao24
+  - name: Timeslots
+  - name: LastUpdate
+    direction: desc
+
+- kind: flight
+  properties:
   - name: Ident
   - name: Timeslots
   - name: LastUpdate
@@ -19,6 +31,5 @@ indexes:
 
 - kind: flight
   properties:
-  - name: Waypoints
+  - name: Ident
   - name: Timeslots
-    direction: desc
