Add perf logging, trying to figure out whether we had spurious writes (we don't) Fixup the bigquery export

--- a/backend/cron.yaml
+++ b/backend/cron.yaml
@@ -7,6 +7,7 @@ cron:
   target: backend
 
 - description: Publish flights into bigquery
-  url: /backend/publish-flights?datestring=yesterday
+  url: /batch/publish-flights?datestring=yesterday
   schedule: every day 07:00
   timezone: America/Los_Angeles
+  target: backend
