--- a/backend/cron.yaml
+++ b/backend/cron.yaml
@@ -8,7 +8,7 @@ cron:
 
 - description: Metar gathering
   url: /metar/lookup
-  schedule: every 1 hours synchronized
+  schedule: every 15 minutes synchronized
   target: ui
 
 - description: Publish flights into bigquery
