Retag yesterday's :SFO && :SJC flights.

--- a/backend/cron.yaml
+++ b/backend/cron.yaml
@@ -16,3 +16,18 @@ cron:
   schedule: every day 07:00
   timezone: America/Los_Angeles
   target: backend
+
+- description: Retag yesterday's inbound SFO flights (pick up :SFO_S etc)
+  url: /batch/flights/dates?job=retag&date=yesterday&tags=:SFO
+  schedule: every day 04:00
+  timezone: America/Los_Angeles
+  target: backend
+
+- description: Retag yesterday's inbound SJC flights (pick up :SJC_N)
+  url: /batch/flights/dates?job=retag&date=yesterday&tags=:SJC
+  schedule: every day 04:15
+  timezone: America/Los_Angeles
+  target: backend
+
+backend.yaml
+backend.yaml
