Add index to support ByTimeRange (i.e. ranged idspecs). Not entirely sure why it can't use the composite index that also has LastUpdate in, but hey.

--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -22,6 +22,11 @@ indexes:
   properties:
   - name: Icao24
   - name: Timeslots
+  
+- kind: flight
+  properties:
+  - name: Icao24
+  - name: Timeslots
   - name: LastUpdate
     direction: desc
 
