--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -12,7 +12,7 @@ basic_scaling:
 handlers:
 - url: /static
   static_dir: static
-- url: /fdb/fr24
+- url: /be/fr24
   script: _go_app
   login: admin
 # Find a way to make batch exempt ...
