--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -42,6 +42,19 @@ indexes:
   - name: LastUpdate
     direction: desc
 
+## These two indices is for an ad-hoc query
+- kind: flight
+  properties:
+  - name: Ident
+  - name: Tags
+  - name: LastUpdate
+
+- kind: flight
+  properties:
+  - name: Tags
+  - name: LastUpdate
+##
+
 - kind: flight
   properties:
   - name: Tags
