Start rendering the realtime view (import the handler from pi/frontend, for now)

--- a/backend/dispatch.yaml
+++ b/backend/dispatch.yaml
@@ -2,10 +2,9 @@ application: serfr0-fdb
 
 dispatch:
 
-# All front doors (to stop stackdriver starting up default module)
+# All front doors go to map view (stackdriver hits them)
 - url: "*/"
-  module: frontend
-
+  module: ui
 - url: "*/fdb/*"
   module: ui
 - url: "*/api/*"
