--- a/app/backend/cron.yaml
+++ b/app/backend/cron.yaml
@@ -28,3 +28,9 @@ cron:
   schedule: every day 01:15
   timezone: America/Los_Angeles
   target: backend
+
+- description: Create a 'condensed flights' object for yesterday's NORCAL flights
+  url: /api/procedures?yesterday=1&tags=:NORCAL:
+  schedule: every day 01:45
+  timezone: America/Los_Angeles
+  target: ui
