Allow the FOIA ACL to specify which individual data sources can be accessed

--- a/app/backend/cron.yaml
+++ b/app/backend/cron.yaml
@@ -33,4 +33,4 @@ cron:
   url: /api/procedures?tags=:NORCAL:&yesterday=1
   schedule: every day 01:45
   timezone: America/Los_Angeles
-  target: ui
+  target: default
