--- a/app/frontend/app.yaml
+++ b/app/frontend/app.yaml
@@ -6,5 +6,8 @@ instance_class: F1
 handlers:
 - url: /static
   static_dir: static
+- url: /api/fr24
+  script: _go_app
+  login: admin
 - url: /.*
   script: _go_app
