--- a/app/backend/app.yaml
+++ b/app/backend/app.yaml
@@ -1,6 +1,5 @@
 service: backend
-runtime: go
-api_version: go1
+runtime: go111
 instance_class: B1
 basic_scaling:
   max_instances: 10
@@ -8,9 +7,10 @@ basic_scaling:
 
 
 handlers:
+# strictly speaking, this is redundant; the default app serves /static.
 - url: /static
-  static_dir: static
+  static_dir: app/backend/static
 # Find a way to make batch exempt ...
 - url: /.*
-  script: _go_app
+  script: auto
 #  login: required
