--- a/app/frontend/app.yaml
+++ b/app/frontend/app.yaml
@@ -1,13 +1,13 @@
 service: default
-runtime: go
-api_version: go1
+runtime: go111
+#api_version: go1
 instance_class: F1
 
 handlers:
 - url: /static
-  static_dir: static
+  static_dir: app/frontend/static
 - url: /api/fr24
-  script: _go_app
+  script: auto
   login: admin
 - url: /.*
-  script: _go_app
+  script: auto
