Share the templates more formally, and stop symlinking into another repo

--- a/app/backend/app.yaml
+++ b/app/backend/app.yaml
@@ -9,7 +9,7 @@ basic_scaling:
 
 handlers:
 - url: /static
-  static_dir: app/backend/static
+  static_dir: app/web/static
 
 - url: /.*
   script: auto
